--- a/NewTraingLog/app/build.gradle
+++ b/NewTraingLog/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'sun.bob:mcalendarview:1.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
